aligning issues sorted

--- a/style.css
+++ b/style.css
@@ -17,6 +17,12 @@ html {
   --clr-Soft-blue: hsl(215, 51%, 70%);
   --clr-Cyan: hsl(178, 100%, 50%);
 }
+
+img {
+  width: 100%;
+  height: auto;
+  object-fit: contain;
+}
 body {
   width: 100vw;
   height: 100vh;
@@ -27,51 +33,77 @@ body {
   justify-content: center;
 }
 .box {
-  width: 25rem;
-
+  width: 22rem;
   background-color: var(--clr-Very-dark2-blue);
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  padding: 1rem;
+  padding: 1.5rem;
+  gap: 1.25rem;
   border-radius: 1rem;
-}
-.card-img {
-  width: 100%;
-  height: 23rem;
-
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  padding: 2rem;
+  box-shadow: 15px solid black;
 }
 .equal {
-  width: 120%;
-  height: 120%;
-  padding: 0.5rem;
+  width: 100%;
   border-radius: 1rem;
 }
-.details {
-  padding-left: px;
-}
 .type {
-  font-weight: 600;
+  font-size: 1.5rem;
   color: var(--clr-White);
 }
 .declearation {
-  padding-left: 10px;
-  padding: 10px;
+  color: var(--clr-Soft-blue);
+  padding-top: 1rem;
 }
 .content {
+  display: flex;
+  justify-content: space-between;
+}
+
+.left {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 0.5rem;
+}
+.price {
+  color: var(--clr-Cyan);
+  font-weight: bolder;
+}
+.days {
+  color: var(--clr-Soft-blue);
+}
+.right {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 0.5rem;
+}
+.icon {
+  /* height: 1.5rem; */
+}
+.time {
+  /* height: 1.5rem; */
+}
+.bottom {
   width: 100%;
-  padding: 0.5rem;
   display: flex;
   flex-direction: row;
   align-items: center;
-  justify-content: space-between;
+  justify-content: left;
+  /* padding-right: 10rem; */
+  font-weight: 700;
+  gap: 1rem;
 }
-.price {
-  font-weight: bolder;
+.profile {
+  /* display: flex; */
+  /* height: 3rem; */
+  width: 2rem;
+  border: 1px solid var(--clr-White);
+  border-radius: 50%;
+}
+.name1 {
+  color: var(--clr-Soft-blue);
+}
+.name {
+  color: var(--clr-White);
 }
